site/releases/2.0.2/release-notes.md
---
layout: page
title: Community
description: Project Community Page
group: nav-right
---
<!--
{% comment %}
Licensed to the Apache Software Foundation (ASF) under one or more
contributor license agreements.  See the NOTICE file distributed with
this work for additional information regarding copyright ownership.
The ASF licenses this file to you under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License.  You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
{% endcomment %}
-->

{% include JB/setup %}


# Apache Bahir 2.0.2 for Apache Spark
    
## Task
    
    [BAHIR-82] - Prepare release based on Apache Spark 2.0.2

## Sub-Task

    [BAHIR-64] - Add test that Akka streaming connector can receive data
    [BAHIR-69] - Clean build between different scala versions

## Test

    [BAHIR-83] - Flaky test in BasicMQTTSourceSuite
    [BAHIR-84] - Build log flooded with test log messages
