site/releases/2.1.0/release-notes.md
---
layout: page
title: Bahir Release 2.1.0
description: Release Notes for Apache Bahir 2.1.0
group: nav-right
---
<!--
{% comment %}
Licensed to the Apache Software Foundation (ASF) under one or more
contributor license agreements.  See the NOTICE file distributed with
this work for additional information regarding copyright ownership.
The ASF licenses this file to you under the Apache License, Version 2.0
(the "License"); you may not use this file except in compliance with
the License.  You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
{% endcomment %}
-->

{% include JB/setup %}


# Apache Bahir 2.1 for Apache Spark 2.1
    
## Task

    [BAHIR-87] - Prepare release based on Apache Spark 2.1.0
    [MINOR]    - Update Scaladoc in MQTTWordCount example  
    [MINOR]    - Fix Maven artifact IDs in README.md files

